# py_wrapping_opencv

./: .gitignore  CMakeLists.txt  boost_cv_sample.cpp
scripts/: run.py
src/: boost_cv_sample.cpp  cv2.hpp
